# bqueue

./: .gitignore  CMakeLists.txt
inc/: bqueue.h
src/: bqueue.c
